--- a/index.css
+++ b/index.css
@@ -408,8 +408,11 @@ a:focus
     /*border-top: 1vh groove #43109c;
     border-top-left-radius: 35%;*/
     border-bottom: 5px ridge #B52952; /*#1035ff;*/
-    border-bottom-right-radius: 25%;
-    
+    border-top: 5px ridge #B52952;
+    border-top-left-radius: 15%;
+    border-top-right-radius: 15%;
+    border-bottom-left-radius: 15%;
+    border-bottom-right-radius: 15%;
 }
 
 .answers{
